--- a/src/sass/rwd/_small.scss
+++ b/src/sass/rwd/_small.scss
@@ -56,7 +56,43 @@
 			}
 		}
 	}
+	.realization {
+		&__box {
+			display: grid;
+			grid-template-columns: repeat(2, 1fr);
+			grid-template-rows: repeat(8, 300px);
+			gap: 10px;
+			&-img {
+				&--1 {
+					grid-column: span 2;
+					grid-row: span 1;
+				}
 
+				&--4 {
+					grid-column: span 2;
+					grid-row: span 1;
+					object-position: bottom;
+				}
+
+				&--10 {
+					grid-row: span 2;
+				}
+
+				&--1,
+				&--4 {
+					&.desktop {
+						display: inline-block;
+					}
+				}
+				&--1,
+				&--4 {
+					&.mobile {
+						display: none;
+					}
+				}
+			}
+		}
+	}
 	.footer {
 		&__domain-name {
 			position: absolute;
@@ -92,41 +128,6 @@
 	.inside-cleaning {
 		&__box {
 			margin-bottom: 5rem;
-		}
-	}
-
-	.realization {
-		&__box {
-			display: grid;
-			grid-template-columns: repeat(2, 1fr);
-			grid-template-rows: repeat(8, 300px);
-			gap: 10px;
-			&-img {
-		
-
-				&--1 {
-					grid-column: span 2;
-					grid-row: span 1;
-				}
-
-				&--4 {
-					grid-column: span 2;
-					grid-row: span 1;
-				}
-
-				&--1,
-				&--4 {
-					&.desktop {
-						display: inline-block;
-					}
-				}
-				&--1,
-				&--4 {
-					&.mobile {
-						display: none;
-					}
-				}
-			}
 		}
 	}
 }
