--- a/src/sass/_style.scss
+++ b/src/sass/_style.scss
@@ -19,7 +19,7 @@ body {
 	position: relative;
 	height: 100vh;
 	width: 100%;
-	background-image: url('../../dist/img/640bmwmatigray.png');
+	background-image: url('../../dist/img/newBlackBmwMati640.jpg');
 	background-size: cover;
 	background-position: bottom center;
 	z-index: 10;
@@ -87,6 +87,7 @@ body {
 	}
 
 	&__scroll-down {
+		display: block;
 		position: absolute;
 		bottom: 4rem;
 		left: 50%;
@@ -254,7 +255,7 @@ body {
 }
 
 .realization {
-	margin-bottom: 10rem;
+	margin-bottom: 6rem;
 	&.section {
 		padding-inline: 0;
 	}
