--- a/src/sass/rwd/_medium.scss
+++ b/src/sass/rwd/_medium.scss
@@ -143,7 +143,7 @@
 	.contact {
 		.section-heading {
 			margin-top: 14rem;
-			margin-bottom: 3.5rem;
+			// margin-bottom: 3.5rem;
 		}
 
 		.form-container {
@@ -157,7 +157,7 @@
 		justify-content: space-evenly;
 		align-items: flex-start;
 		flex-wrap: wrap;
-		margin-top: 15rem;
+		margin-top: 16rem;
 		&__box {
 			height: 100%;
 			margin-bottom: 0;
