before privacy policy

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,7 @@
 @use './pages/outsideCleaning';
 @use './pages/pakiets';
 @use './pages/contact';
+@use './pages/privacy-policy';
 @use '../sass/rwd/small';
 @use '../sass/rwd/medium';
 @use '../sass/rwd/large'; 
