--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -6,7 +6,7 @@
 	padding: 2rem 0;
 	width: 100%;
 	height: 75px;
-	transition: .5s;
+	transition: background-color 0.5s;
 	z-index: 100;
 	&.dark-shadow {
 		background-color: rgba(0, 0, 0, 0.5);
@@ -31,6 +31,7 @@
 		overflow: hidden;
 
 		&-number {
+			color: color.$white1;
 			font-size: 2rem;
 			transform-origin: left;
 			transition: transform 0.5s;
@@ -91,5 +92,3 @@
 .stop-scrolling {
 	overflow-y: hidden;
 }
-
-
