--- a/src/sass/pages/_outsideCleaning.scss
+++ b/src/sass/pages/_outsideCleaning.scss
@@ -4,7 +4,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	margin-top: 15rem;
+	margin-top: 14rem;
 
 	&__box {
 		display: flex;
@@ -31,16 +31,14 @@
 
 			&-price {
 				margin-bottom: 1rem;
-				// font-size: 3.2rem;
 				font-size: 2.6rem;
-				text-transform: uppercase;
 				font-family: lora, serif;
 				font-weight: 400;
+				text-transform: uppercase;
 			}
 
 			&-heading {
 				padding-inline: 3.6rem;
-				// font-size: 2rem;
 				font-size: 1.8rem;
 				font-weight: 400;
 				text-align: left;
@@ -87,16 +85,14 @@
 		}
 	}
 	&__accordion-text {
-		overflow: hidden;
-		max-height: 0;
 		padding-inline: 2rem;
+		max-height: 0;
 		background-color: color.$white3;
 		color: color.$black3;
-
 		border-radius: 0px 0px 10px 10px;
 		box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-
-		transition: 0.5s ease-in-out;
+		overflow: hidden;
+		transition: max-height 0.5s ease-in-out;
 		p {
 			margin: 2rem 0;
 		}
