--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,7 +7,7 @@
 @use 'footer';
 @use './pages/insideCleaning';
 @use './pages/outsideCleaning';
-@use './pages/pakiets';
+// @use './pages/pakiets';
 @use './pages/contact';
 @use './pages/privacy-policy';
 @use '../sass/rwd/small';
