--- a/src/sass/_animations.scss
+++ b/src/sass/_animations.scss
@@ -106,3 +106,16 @@
 		transform: translateY(0px);
 	}
 }
+
+
+@keyframes show-bg {
+	to {
+		opacity: 1;
+	}
+}
+
+@keyframes show-text {
+	to {
+		opacity: 1;
+	}
+}
