--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -12,6 +12,20 @@
 		background-color: rgba(0, 0, 0, 0.5);
 	}
 
+	&__logo {
+		display: inline-block;
+		vertical-align: middle;
+		a {
+			display: inline-block;
+			vertical-align: middle;
+			img {
+				vertical-align: middle;
+				height: 65px;
+				width: 100%;
+			}
+		}
+	}
+
 	&__box {
 		position: relative;
 		display: flex;
