--- a/src/sass/pages/_contact.scss
+++ b/src/sass/pages/_contact.scss
@@ -8,14 +8,14 @@
 	.form-container {
 		padding: 4rem 2rem;
 		background-color: color.$black3;
+		border-radius: 10px 0 0 10px;
 		text-transform: uppercase;
-
 		.form {
 			display: flex;
 			flex-direction: column;
 
 			&__checkbox {
-				margin: .8rem 1rem 1.7rem 0;
+				margin: 0.8rem 1rem 1.7rem 0;
 				width: 16px;
 				height: 16px;
 			}
@@ -26,6 +26,7 @@
 				background-color: color.$black2;
 				color: color.$white2;
 				border: 1px solid transparent;
+				border-radius: 5px;
 				&::placeholder {
 					text-transform: uppercase;
 					color: color.$white2;
@@ -82,11 +83,12 @@
 
 			&__btn {
 				position: relative;
-				margin-top: .5rem;
+				margin-top: 0.5rem;
 				padding: 1.6rem;
 				background-color: color.$black2;
 				color: color.$white2;
 				text-transform: uppercase;
+				border-radius: 5px;
 				z-index: 1;
 				overflow: hidden;
 
@@ -142,6 +144,7 @@
 		height: 350px;
 		width: 100%;
 		border: 0;
+		border-radius:0 10px 10px 0;
 	}
 
 	.wrapper {
