--- a/src/sass/_animations.scss
+++ b/src/sass/_animations.scss
@@ -76,7 +76,6 @@
 	left: -8px;
 	border-top: 2px solid #fff;
 	border-left: 2px solid #fff;
-	// opacity: 1;
 }
 
 .link-animation::after {
@@ -84,7 +83,6 @@
 	right: -8px;
 	border-bottom: 2px solid #fff;
 	border-right: 2px solid #fff;
-	// opacity: 1;
 }
 
 .link-animation:hover::before,
@@ -110,7 +108,8 @@
 
 @keyframes show-bg {
 	to {
-		opacity: 1;
+		background-color: rgba(0, 0, 0, 0.4);
+
 	}
 }
 
