--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,8 +1,9 @@
 @use 'colors' as color;
 
 .footer {
+	position: relative;
 	margin-top: auto;
-	padding: 5rem 2rem;
+	padding: 5rem 0;
 	background-color: color.$black3;
 	text-transform: uppercase;
 
@@ -57,6 +58,14 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		padding: 0;
+	}
+	&-copyright {
+		position: absolute;
+		left: 50%;
+		top: calc(92%);
+		color: color.$gray2;
+		text-align: center;
+		transform: translate(-50%, -50%);
+		width: 100%;
 	}
 }
